[gd_scene load_steps=7 format=3 uid="uid://bd8rfjfpfbpfg"]

[ext_resource type="Script" uid="uid://t3rxo2ito62q" path="res://Code/Items/Weapons/Grenades/Flare.gd" id="1_xrxtp"]
[ext_resource type="Texture2D" uid="uid://dg68vs6pmol2q" path="res://Assets/Icons/Items/Lethal/Flare.png" id="2_u15x2"]
[ext_resource type="AudioStream" uid="uid://bgptvb2vw1180" path="res://Sound/Grenades/Flare.mp3" id="3_g8j3y"]
[ext_resource type="Texture2D" uid="uid://d1pwu8a6c34g3" path="res://Assets/Effects/Light/Light_Circle.png" id="4_2gy5v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_34ifk"]
atlas = ExtResource("2_u15x2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ucyyk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ifk")
}],
"loop": true,
"name": &"No_pin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ifk")
}],
"loop": true,
"name": &"Pin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ifk")
}],
"loop": true,
"name": &"Primed",
"speed": 5.0
}]

[node name="Flare" type="Node2D" groups=["clickable_entities", "grenades", "items", "objects"]]
script = ExtResource("1_xrxtp")
smoke_duration = 15.0
entity_type = "grenade"
pickupable = true

[node name="Icon" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ucyyk")
animation = &"Primed"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractionArea"]
polygon = PackedVector2Array(-15, 0, -16, 0, -16, 2, -15, 2, -15, 3, 0, 3, 0, 2, 1, 2, 1, 0, 0, 0, 0, -1, -15, -1)

[node name="ArmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g8j3y")
max_distance = 1000.0
attenuation = 2.0

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PreloadedTextures" type="Node" parent="."]

[node name="LightTexture" type="Sprite2D" parent="PreloadedTextures"]
visible = false
texture = ExtResource("4_2gy5v")

[connection signal="timeout" from="FlickerTimer" to="." method="_flicker_light"]
